--- a/index.html
+++ b/index.html
@@ -128,12 +128,11 @@
       <h3>Hobbies</h3>
       <ul>
         <li><a href="https://tracesofwords.wordpress.com/" target="_blank">Writing blogs</a></li>
-        <li>Hobby2</li> 
       </ul>
       <h3>Extras</h3>
       <!-- Give hyperlink to website -->
       <ul>
-        <li>Designed the website for the dataset paper</li>
+        <li>Designing a website for my upcoming research paper</li>
       </ul>
       <h3><a href="contact.html">Contact Me</a></h3>
   </body>
